[gd_scene load_steps=9 format=3 uid="uid://q7n7lmeh2lu3"]

[ext_resource type="Script" path="res://UI/UI.gd" id="1_ow8oc"]
[ext_resource type="Texture2D" uid="uid://dyomi8sgh5bdo" path="res://sprites/scroll.png" id="2_10fg5"]
[ext_resource type="Texture2D" uid="uid://dt2fboh1665ef" path="res://sprites/heart.png" id="3_cvy7h"]
[ext_resource type="Texture2D" uid="uid://bjyhv5f8fswu1" path="res://sprites/coinsmall.png" id="4_7bkhk"]
[ext_resource type="FontFile" uid="uid://bjkj8fb24elqd" path="res://timesbd.ttf" id="5_u15ga"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n16hp"]
texture = ExtResource("2_10fg5")
texture_margin_left = 27.0
texture_margin_top = 24.0
texture_margin_right = 32.0
texture_margin_bottom = 23.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(4.75419, 0, 91.2458, 79)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fbbtk"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 11
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hupfj"]
bg_color = Color(0.712692, 3.03224e-06, 9.62615e-08, 1)
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 6
anti_aliasing = false

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_ow8oc")

[node name="lifePanel" type="Panel" parent="."]
offset_left = 1.0
offset_top = 1.0
offset_right = 188.0
offset_bottom = 78.0
theme_override_styles/panel = SubResource("StyleBoxTexture_n16hp")

[node name="lifeBar" type="ProgressBar" parent="lifePanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -11.5
offset_right = -22.0
offset_bottom = 12.5
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_fbbtk")
theme_override_styles/fill = SubResource("StyleBoxFlat_hupfj")
value = 100.0
show_percentage = false

[node name="TextureRect" type="TextureRect" parent="lifePanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 14.0
offset_top = -36.5
offset_right = 67.0
offset_bottom = 34.5
grow_vertical = 2
texture = ExtResource("3_cvy7h")

[node name="scorePanel" type="Panel" parent="."]
offset_left = 613.0
offset_right = 800.0
offset_bottom = 77.0
theme_override_styles/panel = SubResource("StyleBoxTexture_n16hp")

[node name="TextureRect" type="TextureRect" parent="scorePanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 17.0
offset_top = -35.5
offset_right = 85.0
offset_bottom = 35.5
grow_vertical = 2
texture = ExtResource("4_7bkhk")

[node name="scoreLabel" type="Label" parent="scorePanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -20.5
offset_right = -38.0
offset_bottom = 28.5
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_u15ga")
theme_override_font_sizes/font_size = 35
text = "0"
horizontal_alignment = 1

[node name="timeLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.0
offset_top = 7.0
offset_right = 56.0
offset_bottom = 53.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.114897, 0.114897, 0.114897, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_u15ga")
theme_override_font_sizes/font_size = 33
text = "0.0"
horizontal_alignment = 1
